--- a/VRChat/53/1143753.html
+++ b/VRChat/53/1143753.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "tKWNY2U/1jf+lnWFY7aMo6S7/T6U6HYKNuU4lRsnf+4="></script>
+    "ZAjTOwtoDEX5JKZ6i1hS+pw3JX0tYjRykpqwxIgwdsE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRM/VRChatアバター想定オリジナル羽根っ娘3Dモデル［レイヴ］Ver2.0","description":"□VRChat向けオリジナル羽根っ娘3Dモデル　レイヴ\n製作者：サークル麻婆弾　ヴィジ(ap1895)\n19582△ポリゴン。(Ver1.01)\n23195△ポリゴン。(Ver2.0)\n\nVer2.0になり、新年巫女服バージョンを追加しました。\nVroidHubにも登録してます→\nhttps://hub.vroid.com/characters/743200892859676653/models/9053852164040395981\n\n\n□内容\n・Rave_Avatar.unitypackage　本体\n\n・Rave_Avatar_V1.01.unitypackage　本体\n\n・Rave.fbx　本体2\n\n・Rave_V2.0.unitypackage　Ver2.0本体\n\n・Rave_Avatar_V1.01.vrm VRM本体\n\n・texフォルダ　各種テクスチャ・マップ\n\n・readme.txt これ\n\n・0x.png　サンプル画像\n\n\n□使用方法\n\nfbxデータやunitypackageを各種ソフトにインポートして下さい。\n\nunitypackage版をインポートする際は、UnityChanToonShader2.0.5及びVRCSDKの最新版を予めプロジェクトにインポートした上で\n本アバターのunitypackageをインポートして下さい。\nDynamicBoneを使用する場合は同様に事前にインポートを行って下さい。\n\n□V1.01について\n\n幾つかの軽量化措置を行いました。\ndynamicbornの使用を絞れば12/21以降のVRChatでもMediumとなります。\n\n\n□VRM版\nV1.01ベースとなっています。\n標準の表情の殆ど及びリップシンク、アイトラッキングに対応済み。\n\n\n□Ver2.0\n\n本体の改修及び衣装の変更版です。\n髪・翼はVer1.01までと共通です。\nまた、巫女服の色違い版テクスチャを同梱しています。（サンプル画像参照）\n\n\n\n\n□利用規約\n\n・本モデルデータの著作権は製作者ヴィジに帰属します。\n\n・改変・改造は自由に可能です。R-18/R-18Gも可。\n\n・政治的、宗教的、誹謗中傷目的での利用を禁じます。\n\n・元モデルデータ、改変データを再配布・再利用可能な状態で公開する事を禁じます。\n\n・VRCなどのプラットフォーム上にて、アバターペデスタル等の購入者以外の不特定多数が利用できる状態や、public設定でのアバターアップロードを禁じます。\n\n・本モデルの購入者は営利活動での利用が可能です。\n\n・本モデルの利用によるトラブル・損失等に製作者は一切の責任を負いません。\n\n\n□更新履歴\n\n2018/12/20　販売開始\n\n2018/12/21　軽量化版(幾つかのメッシュを結合しました)のV1.01を同梱しました。\n\n2018/12/25　VRM形式に対応しました。\n\n2018/12/31　Ver2.0、2019新年巫女服バージョンを追加しました。\n\n\n\n\n□連絡先\n\nTwitter： @mabo_to_fu\nVRChat：AP1895\nメール： stanag2324@gmail.com","url":"https://booth.pm/ja/items/1143753","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3500"},"image":"https://booth.pximg.net/c/620x620/dd09d57d-ff0e-4d48-b34c-08c891168638/i/1143753/98ab9a4a-e569-4bf9-b761-b686df349595_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tKWNY2U/1jf+lnWFY7aMo6S7/T6U6HYKNuU4lRsnf+4="></script>
+    nonce="ZAjTOwtoDEX5JKZ6i1hS+pw3JX0tYjRykpqwxIgwdsE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1143753/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               135
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1143753/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               135
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
