--- a/VRChat/55/1142155.html
+++ b/VRChat/55/1142155.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "A4sxw0BEMOB/EGG2wDjXN9EW1tuMrB3bx/ni5wwBnFg="></script>
+    "yPIA/ITNWBthwHY/uC+QBbbeNtjPnszwNYjhElvw6TE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"亜-02式自動拳銃【VRChat向け】","description":"【注意】\n・商品画像は動く城のフィオのお店 様の「裏面を描画するStandardシェーダー」を使用しています。\n本製品に含まれているシェーダーはスタンダードシェーダーです。\n・商品画像に映っている専用ホルスターは本製品に含まれていません。今後別の形で販売予定です。\n・Textureを修正したため商品画像と多少異なる点がありますが、ご了承ください。\n\n---------------------------------------------------------\n\n「段落落ちされ肉厚くしたスライド、大形化されたドット入りサイトシステム、ガバメントに近い「引く」ことによって射撃の即応性やガク引きを抑えられるトリガー、全体的に滑り止めを施したグリップ、７０年代の撃ち方でも対応される、握り方を問わない引っ掛け付きトリガーガード\nいいと思います！」-アザトナナさん 　@aoinanaya ","url":"https://booth.pm/ja/items/1142155","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/41af4b60-c647-4ace-80c0-e2874277d5ec/i/1142155/87d800e8-8924-4908-98f3-67f8f3e1fbf5_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="A4sxw0BEMOB/EGG2wDjXN9EW1tuMrB3bx/ni5wwBnFg="></script>
+    nonce="yPIA/ITNWBthwHY/uC+QBbbeNtjPnszwNYjhElvw6TE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1142155/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               130
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1142155/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               130
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
