--- a/VRChat/89/1141789.html
+++ b/VRChat/89/1141789.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "foA/7LXOsE0/LUPEV8Q1XwhhTIQS8FIuVIzypCAe9EQ="></script>
+    "/LMcXE1FQ0qT+JceK3WwNYC3YeQRr7i2ttyRDyH7+RI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Alt_v1組み立てキット(3Dモデル)","description":"◎素敵なスペック\n・ポリゴン数　おどろきの△666　黙示録\n・とても短足なhumanoid形式\n・リップシンクなんてものはありません\n・テクスチャたっぷり2種類同梱(ゆるい線あり・なし)\n・テクスチャ改造しまくれるPSD付き\n\n\n◎つかいかた\n・モデルデータは個人利用自由。改変分解合体ご自由に。\n(ただしキャラクターとしての利用は要相談)\n\n・VRCその他においてアバターとしての利用可\n　VRCではデスクトップ推奨　VRでも問題ありませんが手足がむにゃむにゃになります。※フルトラは非対応 すごいことになります\n・裏面表示、アウトライン等の設定をシェーダーで行うと視界が暗黒になる可能性が大きいのでご注意ください。\n　あたまが大きいです。\n\nアバターとして使用したり、ワールドに置いたり、動画の賑やかしモブとして使用したり、アバターの頭や肩に乗せてみたり、沢山色違いを並べてドミノしたり…使い方は自由です。えんじょい\n\n〇注意〇\n・Unityにてhumanoid設定をする際指のボーンがごっそり外れているので慎重に再設定してください。お手数おかけします。\n・無知故の不真面目な出来なのでノー文句でお願いします。\n\n\n▲▲自由とはいえ、ダメなこともあります。以下よく確認の上楽しんでください。▲▲\n・人の迷惑になる行為に使用することはだめです　悪ふざけはほどほどに\n・このデータ、このデータの改変物を二次配布・販売することはだめです。だめ\n・このデータはProject Alt(網野環)作です。万が一、他の人が自作だと偽っているのを発見した場合はこっそりとご連絡ください。","url":"https://booth.pm/ja/items/1141789","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/81ecc4de-6b51-48cf-8484-df24cee7afd3/i/1141789/10546a69-0883-43bd-b788-a71458f51494_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="foA/7LXOsE0/LUPEV8Q1XwhhTIQS8FIuVIzypCAe9EQ="></script>
+    nonce="/LMcXE1FQ0qT+JceK3WwNYC3YeQRr7i2ttyRDyH7+RI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -140,6 +140,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -184,7 +186,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1141789/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               60
@@ -199,14 +201,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1141789/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               60
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
